--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="refresh" content="15">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <title>Sensor Reading App </title>
+  <title>Water Quality Monitoring System </title>
+  <link href="logobg.ico" rel="shortcut icon">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'><link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -26,7 +28,7 @@
         font-weight:800;
       font-size: 1.5rem;
       vertical-align:middle;
-      padding-bottom: 15px;
+      padding-bottom: 7px;
     }
  body{
     font-family: 'Kanit', sans-serif;
@@ -80,7 +82,7 @@ text-align: center;
 <body>
      <div class="heading">
 
-         <p class="head"> <img src="./logobg.png"  width="80px" height="80px">  Water Quality Monitoring System </p>
+         <p class="head"> <img src="https://100rabhsrivastava.github.io/WQMS_NTU/logobg.png"  width="80px" height="80px">  Water Quality Monitoring System </p>
         <!-- <p class="head">Sensor Reading App <i class="fas fa-clipboard-list"></i></p> -->
      </div> 
     <br>
