--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'><link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
       html {
-        font-family: 'Kanit', sans-serif;
+       font-family: 'Rowdies', cursive;
      display: inline-block;
      margin: 0px auto;
      text-align: center;
@@ -31,13 +32,13 @@
       padding-bottom: 7px;
     }
  body{
-    font-family: 'Kanit', sans-serif;
+   font-family: 'Rowdies', cursive;
      background-color: #A8DADC; 
      /* background-color: white; */
     font-family: 'Secular One', sans-serif;
  }
  .heading{
-    font-family: 'Kanit', sans-serif;
+   font-family: 'Rowdies', cursive;
     background-color:#1D3557;
     width:100%;
     padding: 12px;
@@ -49,7 +50,7 @@ padding-left: 10px;
 font-size:20px;
 color:white; }
 .head{
-    font-family: 'Kanit', sans-serif;
+   font-family: 'Rowdies', cursive;
     font-size: 40px;
     /* line-height: 10px; */
     letter-spacing: 2px;
@@ -129,7 +130,7 @@ text-align: center;
             
           </p>
 		  <p id="temperature" >
-324          </p>
+27          </p>
 		  
         </div>
       </div>
@@ -183,9 +184,9 @@ Acidic	  </td>
       <th scope="row">3</th>
       <td>Temperature </td>
       <td>
-324	  </td>
+27	  </td>
       <td>
-data loading 	  </td>
+Normal	  </td>
     </tr>
 	  <tr>
       <th scope="row">4</th>
